--- a/Temple v2/index.html
+++ b/Temple v2/index.html
@@ -236,12 +236,7 @@
     </footer>
 
 
-
-
-
-
-
-
+  <!--PARTICLES SCRIPT-->
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
