--- a/Temple v2/index.html
+++ b/Temple v2/index.html
@@ -39,7 +39,7 @@
   
                       <div class="social-media">
                         <a href="https://discord.gg/agency"><i class='bx bxl-discord-alt'></i></a>
-                        <a href=""><i class='bx bxl-twitter'></i></a>
+                        <a href="https://twitter.com/templeweb3"><i class='bx bxl-twitter'></i></a>
           
                     </div>
                       
@@ -183,7 +183,7 @@
 
             <div class="info" data-aos="zoom-in" data-aos-duration="1000">
                 <h1>CONTACT US</h1>
-                <p>1. Join our Discord Server : <a href="#">TEMPLE</a></p>
+                <p>1. Join our Discord Server : <a href="https://discord.gg/agency">TEMPLE</a></p>
 
                 <p>2. Open a ticket in our Discord Server</p>
             </div>
