--- a/Temple v2/index.html
+++ b/Temple v2/index.html
@@ -19,8 +19,7 @@
     
 
     <!--NAVBAR-SECTION -->
-    <section>
-        <header class="black">
+        <header>
           <div class="limiter">
               <nav class="navbar">
                 <a href="#"><img class="nav-logo1" src="assets/TEMPLE LOGO.png" alt=""></a>
@@ -53,7 +52,6 @@
               </nav>
           </div>
         </header>
-      </section>  
 
 
       <div id="particles-js" class="particles"></div>
@@ -240,6 +238,13 @@
 
 
 
+     <!--AOS ANIMATION SCRIPT-->
+
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+     crossorigin="anonymous"></script>
+
     <!--MENUBAR SCRIPT-->
 
     <script
@@ -273,12 +278,6 @@
         });
     </script>
 
-     <!--AOS ANIMATION SCRIPT-->
-
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-     crossorigin="anonymous"></script>
 
     <!-- ANIMATION -->
 
