--- a/Temple v2/index.html
+++ b/Temple v2/index.html
@@ -22,11 +22,11 @@
         <header>
           <div class="limiter">
               <nav class="navbar">
-                <a href="#"><img class="nav-logo1" src="assets/TEMPLE LOGO.png" alt=""></a>
+                <a href="#"><img class="nav-logo1" src="assets/temple1.svg" alt=""></a>
   
   
                   <ul class="navlinks" id="links">
-                    <a href="#"><img class="logo-nav" src="assets/TEMPLE LOGO.png" alt=""></a>
+                    <a href="#"><img class="logo-nav" src="assets/temple1.svg" alt=""></a>
                       
                       <div class="center">
                           <li class="navitems"><a href="#home" class="itemlinks">HOME</a></li>
@@ -204,7 +204,7 @@
 
             <div class="left-footer">    
                 <a href="#home">
-                    <img src="assets/TEMPLE LOGO.png">
+                    <img src="assets/temple1.svg">
                 </a>
 
             </div>
